--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "@currency-converter-monorepo/source",
+  "name": "@cc-nx-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx nx dev currency-converter-page"
+  },
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@floating-ui/react": "^0.27.5",
+    "@floating-ui/react-dom": "^2.1.2",
     "next": "~15.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@emotion/babel-plugin": "11.11.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
@@ -20,6 +29,9 @@
     "@nx/js": "20.5.0",
     "@nx/next": "20.5.0",
     "@nx/playwright": "20.5.0",
+    "@nx/react": "20.5.0",
+    "@nx/vite": "20.5.0",
+    "@nx/web": "20.5.0",
     "@nx/workspace": "20.5.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -31,6 +43,8 @@
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -43,6 +57,8 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "20.5.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -51,6 +67,13 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "verdaccio": "^6.0.5",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
