--- a/libs/currency-converter-ui/tsconfig.json
+++ b/libs/currency-converter-ui/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "jsxImportSource": "@emotion/react"
+    // "jsxImportSource": "@emotion/react"
   },
   "files": [],
   "include": [],
