--- a/libs/currency-converter-ui/project.json
+++ b/libs/currency-converter-ui/project.json
@@ -4,6 +4,20 @@
   "sourceRoot": "libs/currency-converter-ui/src",
   "projectType": "library",
   "tags": [],
-  "// targets": "to see all targets run: nx show project currency-converter-ui --web",
-  "targets": {}
+  "targets": {
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/{projectRoot}"
+      }
+    }
+  },
+  "release": {
+    "version": {
+      "generatorOptions": {
+        "packageRoot": "dist/{projectRoot}",
+        "currentVersionResolver": "git-tag",
+        "fallbackCurrentVersionResolver": "disk"
+      }
+    }
+  }
 }
