--- a/libs/currency-converter-view/project.json
+++ b/libs/currency-converter-view/project.json
@@ -5,5 +5,20 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project currency-converter-view --web",
-  "targets": {}
+  "targets": {
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/{projectRoot}"
+      }
+    }
+  },
+  "release": {
+    "version": {
+      "generatorOptions": {
+        "packageRoot": "dist/{projectRoot}",
+        "currentVersionResolver": "git-tag",
+        "fallbackCurrentVersionResolver": "disk"
+      }
+    }
+  }
 }
