--- a/nx.json
+++ b/nx.json
@@ -58,6 +58,14 @@
         "buildDepsTargetName": "build-deps",
         "watchDepsTargetName": "watch-deps"
       }
+    },
+    {
+      "plugin": "@nx/rollup/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "buildDepsTargetName": "build-deps",
+        "watchDepsTargetName": "watch-deps"
+      }
     }
   ],
   "targetDefaults": {
@@ -79,6 +87,7 @@
     }
   },
   "release": {
+    "projects": ["libs/*"],
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     }
