--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@floating-ui/react-dom": "^2.1.2",
     "next": "~15.1.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
